HEAD
    + Added installation documentation.
    + Application settings now have default values that work out of the box.
    + Added support for measures with no aggregations.
0.2
    + Initial import into repository. 
    + Added basic saving/sharing capabilities.
    + Initial separation of components.
    + Refactored Javascript code to be more object-oriented.
    + Finished functional application prototype (exploration, tables and charts). 