@@ -1,0 +1,139 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-us" xml:lang="en-us" >
+<head>
+
+    <title>CubesViewer GUI Local</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="robots" content="NONE,NOARCHIVE" />
+
+	<link rel="stylesheet" href="../web/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="../web/static/css/blueprint/print.css" type="text/css" media="print">
+	<!--[if lt IE 8]> <link rel="stylesheet" href="../web/static/css/blueprint/ie.css" type="text/css" media="screen, projection"> <!¡[endif]-->
+
+	<link type="text/css" href="../web/static/css/jqueryui-cupertino/jquery-ui-1.9.2.custom.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../web/static/css/jqgrid/ui.jqgrid.css" />
+	<link type="text/css" href="../web/static/js/qtip/jquery.qtip.css" rel="stylesheet" />
+
+	<link rel="stylesheet" type="text/css" href="../web/static/css/cvapp.css" />
+	
+	
+	<script type="text/javascript" src="../web/static/js/dateformat/dateformat.js"></script>
+
+	<script type="text/javascript" src="../web/static/js/jquery/jquery-1.8.3.js"></script>
+	<script type="text/javascript" src="../web/static/js/jquery/jquery-ui-1.9.2.custom.min.js"></script>
+	<script type="text/javascript" src="../web/static/js/jquery/jquery.cookie.js"></script>
+	
+	<script type="text/javascript" src="../web/static/js/qtip/jquery.qtip.js"></script>
+
+	<script src="../web/static/js/jqgrid/i18n/grid.locale-en.js" type="text/javascript"></script>
+	<script src="../web/static/js/jqgrid/jquery.jqGrid.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="../web/static/js/cvapp.js"></script>      
+
+	
+	
+
+<link type="text/css" rel="stylesheet" href="../web/static/css/cubesviewer/cubesviewer.css" />    
+<link type="text/css" rel="stylesheet" href="../web/static/js/wiky/wiky.math.css" />    
+    
+<script type="text/javascript" src="../web/static/js/wiky/wiky.js"></script>
+<script type="text/javascript" src="../web/static/js/wiky/wiky.math.js"></script>
+<script type="text/javascript" src="../web/static/js/flotr2/flotr2.min.js"></script>
+
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.explore.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.series.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.views.cube.chart.js"></script>
+<script type="text/javascript" src="../web/static/js/cubesviewer/cubesviewer.gui.js"></script>
+
+<script type="text/javascript">
+	
+	// Initialize CubesViewer when document is ready
+	$(document).ready(function() {
+	    
+		var cubesUrl = prompt ("Enter your Cubes Server URL", "http://localhost:5000");
+		
+		cubesviewer.init({
+	        cubesUrl: cubesUrl,
+	        ajaxLoaderUrl: "/static/img/ajax-loader.gif"
+	    });
+		
+		cubesviewer.gui.init({
+	        container: $('#cubesviewer').get(0)
+	        
+	        //user: 1,
+	        //backendUrl: "http://localhost:8000/cubesviewer"
+		});
+		
+	    // Start Cubesviewer system
+        cubesviewer.refresh();
+		
+	});
+	
+</script>
+  
+	
+</head>
+
+<body id="">
+	<div id="body">
+		
+        <table>
+            <tr>
+                <td>
+                    <div>
+
+<div id="header"  class="ui-widget ui-widget-content ui-corner-all">
+    <div style="float: left;">
+        <img id="cv-logo" title="CubesViewer" src="../web/static/img/cubesviewer-logo.png" />
+    </div>
+
+    <h1 id="site-name">CubesViewer GUI Local</h1>
+
+    <div style="clear: both;"></div>
+</div>
+
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 100%; vertical-align: top;">
+                  
+                  
+<!-- Cubes Viewer GUI container -->
+<div id="cubesviewer">
+
+    <div class="cv-gui-panel ui-widget ui-widget-content ui-corner-all" >
+    </div>
+    
+    <div class="cv-gui-workspace">
+    </div>
+
+</div>
+
+                </td>
+            </tr>
+        </table>
+        <div>
+        
+        
+<div id="footer" style="clear: both; padding-top: 20px;">
+	<div style="height: 1px; border-top: 1px solid #DDDDDD; padding-top: 4px;"></div> 
+	<div style="float: right; white-space: nowrap;">
+		<p style="vertical-align: middle;"> 
+		<a href="http://databrewery.org/" target="_blank"><img title="Powered by Databrewery Cubes" style="width: 30px; height: 30px;" src="../web/static/img/cubes-logo.png" /></a>
+		<img title="Powered by CubesViewer" style="width: 65px; height: 30px;" src="../web/static/img/cubesviewer-logo.png" />
+		</p>
+	</div>
+	<div>
+		<p>CubesViewer</p>
+	</div>
+</div>
+</div>    
+        		
+	</div>
+</body>
+
+</html>
